# dynamic_mapping

./: .gitignore  .gitmodules  CMakeLists.txt  display_blob_position.pd  dynamic_mapping_client.pd  dynamix_mapping_client.pd  nosie.pd  packaging.sh  remote.pd
score/: 01.scorejson  base.scorejson  début.scorejson  gymnase_2018.03.09.scorejson  gymnase_2018.03.10.scorejson  gymnase_2018.03.10_fixed.scorejson  gymnase_2018.03.11.scorejson  ligne.scorejson  ligne2.scorejson  suite.scorejson  tout.scorejson
src/: Pix_share.cpp  Pix_share.h  dynamic_mapping.cpp  dynamic_mapping.h  main.cpp  ofApp.cpp  ofApp.h
